[Deployment] Create ~/.ssh/config file if absent
Ansible will use this file and fail if it is absent.
So, create empty SSH config file if it is absent.

Change-Id: I86f424c30229e72eaf2e6a50a194988d5d6ac528

--- a/deployment/tox.ini
+++ b/deployment/tox.ini
@@ -30,6 +30,7 @@ setenv =
     ANSIBLE_SSH_ARGS="-C -o ControlMaster=auto -o ControlPersist=60s -F {homedir}/.ssh/config"
 whitelist_externals = *
 commands =
+    touch {homedir}/.ssh/config
     python -m pip install --upgrade pip>=9.0.0 setuptools wheel
     pip install \
         cryptography \
