Add TC restart app pod when target node is down
New TC insures that app pod is restarted properly when one of the
target node is down.

This patch includes libs of vmware api
These libraries can perform VM operations like power on and off via
vmware client api's.

Change-Id: I11ad4dc3318cb0583de5882d8067ed7e30ea9962

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -59,3 +59,13 @@ openshift:
 common:
     stop_on_first_failure: False
     heketi_command_timeout: 120
+
+cloud_provider:
+    name: '<fake-cloud-provider-name eg. vmware>'
+    vmware:
+        hostname: '<fake-hostname>'
+        username: '<fake-username>'
+        password: '<fake-password>'
+        port: 443
+    aws: # To be done in future
+    libvirt: # To be done in future
