--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands =
         mock \
         rtyaml \
         ddt \
+        pyvmomi \
         prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
@@ -43,6 +44,7 @@ commands =
         mock \
         rtyaml \
         ddt \
+        pyvmomi \
         prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git@python3_port1 \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
