Fix playbook for generation of config file
'playbooks/generate-tests-config.yaml' playbook fails when
cluster has 'glusterfs-registry' nodes. So, fix it by using proper
filtering in shell commands.

Change-Id: I884f57e646a513b1ceddc5345099fcd8379fce72

--- a/deployment/playbooks/generate-tests-config.yaml
+++ b/deployment/playbooks/generate-tests-config.yaml
@@ -44,7 +44,7 @@
     when: item.strip() != ''
 
   - name: Read namespace of a Heketi deployment config
-    shell: "oc get dc --all-namespaces | grep heketi | awk '{ print $1}'"
+    shell: "oc get dc --all-namespaces | grep -e heketi | grep -v registry | awk '{ print $1}'"
     register: heketi_namespace_raw
   - name: Save namespace name in a separate var
     set_fact:
