Add test cases for the heketi zones feature
Add 10 test cases for testing Heketi zones feature.
To make all the Heketi zones test cases run in the single suite using the same
cluster set 'common.allow_heketi_zones_update' config option to "True" value.
By default it is set to "False" and only small set of test cases can run
having such value.

Change-Id: I69a1f7c96c9f52a06134e715e113ccd9b06764e6

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -57,6 +57,7 @@ openshift:
                 volumenameprefix: "autotests-block"
 
 common:
+    allow_heketi_zones_update: False
     stop_on_first_failure: False
     heketi_command_timeout: 120
 
