--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -76,6 +76,7 @@ openshift:
 
 common:
     allow_heketi_zones_update: False
+    check_heketi_db_inconsistencies: True
     stop_on_first_failure: False
     heketi_command_timeout: 120
 
