Make 'provisioner' be autocalculated for storage classes
In OCS 3.11.4 was changed the approach for 'provisioners' in storage
classes due to the BugZilla bugs [1] and [2].

So, change the approach for getting 'provisioner' value in this project
making it be autocalculated based on the data taken from the
block provisioner pod, which is located in the working namespace.

[1] https://bugzilla.redhat.com/show_bug.cgi?id=1732787
[2] https://bugzilla.redhat.com/show_bug.cgi?id=1738394

Change-Id: Ic1037038e39abba2b2a1ad6dc3ddbfe42473cb88
Signed-off-by: vamahaja <vamahaja@redhat.com>

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -60,13 +60,15 @@ openshift:
     dynamic_provisioning:
         storage_classes:
             file_storage_class:
-                provisioner: "kubernetes.io/glusterfs"
+                # 'provisioner' option is no longer supported.
+                # It gets autocalculated.
                 resturl: "<fake-url>"
                 restuser: "<fake-user>"
                 secretnamespace: "<fake-namespace-name>"
                 volumenameprefix: "autotests-file"
             block_storage_class:
-                provisioner: "gluster.org/glusterblock"
+                # 'provisioner' option is no longer supported.
+                # It gets autocalculated.
                 resturl: "<fake-url>"
                 restuser: "<fake-user>"
                 restsecretnamespace: "<fake-namespace-name>"
