Add TC verify gluster pod respin does not affect the metrics
Delete a gluster pod which is hosted on active path
Wait for new gluster pod to come up
Verify the state of cassandra pod, iscsi and multipath

Change-Id: Iba938e7203e6fb86cd953c48040f6f730df8626c

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -66,6 +66,7 @@ additional_gluster_servers:
 
 openshift:
     storage_project_name: "<storage-project-name>"
+    registry_project_name: "<registry-project-name>"
     heketi_config:
         heketi_dc_name: "<fake-name-of-heketi-deployment-config>"
         heketi_service_name: "<fake-name-of-heketi-service>"
