--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ commands =
         rtyaml \
         ddt \
         pyvmomi \
+        pytest-custom-exit-code \
         prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
@@ -45,6 +46,7 @@ commands =
         rtyaml \
         ddt \
         pyvmomi \
+        pytest-custom-exit-code \
         prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git@python3_port1 \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
