[Config] Add variables for system testing
Add variables in config file which will help us to scale our setup.

Change-Id: I99739a090c1b2fd92afc2242b5ec6552205ce92f
Signed-off-by: Nitin Goyal <nigoyal@redhat.com>

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -106,6 +106,16 @@ common:
     stop_on_first_failure: False
     heketi_command_timeout: 120
 
+scaleup:
+    run_scale_up_on_start: True
+    skip_cleanup: True
+    file_pvc_count: 500
+    file_pod_count: 100
+    arbiter_pvc_count: 200
+    arbiter_pod_count: 100
+    block_pvc_count: 200
+    block_pod_count: 100
+
 cloud_provider:
     name: '<fake-cloud-provider-name eg. vmware>'
     vmware:
