--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ markers =
     tier0: Tier0 functional test cases
     tier1: Tier1 functional test cases
     tier2: Tier2 functional test cases
+    tier3: Tier3 non functional test cases
+    scaleUp: ScaleUp non functional test case
