[ConfigFix] Fix pytest version for 'functional3' environment
Pytest version '5.4.1' has regression issue where functions
registered with 'TestCase.addCleanup' were not being called
on test failures. Add fix in 'tox.ini' to upgrade pytest to
>= 5.4.2 version for 'functional3' environment.

Change-Id: I27c3356c995a50a8d5cc32d7aad958116bd2cd88
Signed-off-by: vamahaja <vamahaja@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ commands =
     find . -type f -name "*.py[c|o]" -delete
     python3 -m pip install --upgrade pip>=9.0.0 setuptools wheel
     pip3 install \
+        pytest>=5.4.2 \
         simplejson \
         mock \
         rtyaml \
