[LibFix] Add 'collect_logs' param in 'oc_delete' lib
Change-Id: I9d99f367b82c6570e1390c6b137e0b9bf401a19c
Signed-off-by: vamahaja <vamahaja@redhat.com>

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -105,6 +105,7 @@ common:
     check_heketi_db_inconsistencies: True
     stop_on_first_failure: False
     heketi_command_timeout: 120
+    heketi_logs_before_delete: False
 
 scaleup:
     run_scale_up_on_start: True
