[TestFix][Tier3] Add pytest marker for 'tier3' tests
Change-Id: Idd21f2d0cfb2a1171e4e8464646684ac9164ad0e
Signed-off-by: vamahaja <vamahaja@redhat.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@ junit_family=legacy
 markers =
     tier1: Tier1 functional test cases
     tier2: Tier2 functional test cases
-    tier3: Tier3 non functional test cases
+    tier3: Tier3 functional test cases
     scaleUp: ScaleUp non functional test case
