--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ markers =
     tier1: Tier1 functional test cases
     tier2: Tier2 functional test cases
     tier3: Tier3 functional test cases
+    tier4: Tier4 functional test cases
     scaleUp: ScaleUp non functional test case
