[TestFix] Add config to read i/o images
Add support to pass I/O image from config file

Change-Id: I2c943ba0efaeab3a44eef63030965f36f8086c1b

--- a/tests/glusterfs-containers-tests-config.yaml
+++ b/tests/glusterfs-containers-tests-config.yaml
@@ -114,6 +114,12 @@ openshift:
         prometheus_resources_selector: "<prometheus_recources_selector>"
         alertmanager_resources_selector: "<alertmanager_resources_selector>"
 
+    # 'io_container_images' section covers the details of container images
+    # used for I/O
+    io_container_images:
+        cirros: quay.io/libpod/cirros
+        busybox: quay.io/prometheus/busybox
+
 common:
     allow_heketi_zones_update: False
     check_heketi_db_inconsistencies: True
