--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,6 @@ markers =
     tier3: Tier3 functional test cases
     tier4: Tier4 functional test cases
     scaleUp: ScaleUp non functional test case
+    concurrentOps: Concurrent non functional test cases
+    concurrentblockOps: Concurrent non functional block test cases
+    noDelay: ScaleUp non functional test cases with no Delay
