[Config] Update test tier definitions

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,14 @@
 [pytest]
 junit_family=legacy
 markers =
-    tier1: Tier1 functional test cases
-    tier2: Tier2 functional test cases
-    tier3: Tier3 functional test cases
-    tier4: Tier4 functional test cases
-    scaleUp: ScaleUp non functional test case
-    concurrentOps: Concurrent non functional test cases
-    concurrentblockOps: Concurrent non functional block test cases
-    noDelay: ScaleUp non functional test cases with no Delay
+    tier1: marker for tier1 tests
+    tier2: marker for tier2 tests
+    tier3: marker for tier3 tests
+    tier4a: marker for tier4 tests suite a
+    tier4b: marker for tier4 tests suite b
+    tier4c: marker for tier4 tests suite c 
+    tier4d: marker for tier4 tests suite d 
+    scaleUp : scale capacity/node tests
+    concurrentOps: concurrent file volume operations tests
+    concurrentBlockOps: concurrent blockvolume operations tests
+    noDelay: tests without operation delay
