[ConfigFix] Add 'PyYAML==5.4.1' version in 'functional3' tox env

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ commands =
     python3 -m pip install --upgrade pip>=9.0.0 setuptools wheel
     pip3 install \
         pytest>=5.4.2 \
+        pyyaml==5.4.1 \
         simplejson \
         mock \
         rtyaml \
