[Config] Add new test merker for scaled heketi operations

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,4 @@ markers =
     concurrentOps: concurrent file volume operations tests
     concurrentBlockOps: concurrent blockvolume operations tests
     noDelay: tests without operation delay
+    heketiOps: scaled heketi volume operations tests
